# GNN-MWVC

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
DynMWVC/: mwvc.h
DynWVC2/: converter.cpp  mwvc.cpp  mwvc.h
FastWVC/: mwvc.h
HILS/: Makefile  README
HILS/src/: Graph.cpp  main.cpp
HILS/test_data/dimacs/: brock200_1
NuMWVC/: wvcp_0123.c  wvcp_0123.h
ex3/: Run_DynMWVC.sh  Run_DynWVC2.sh  Run_FastMWVC.sh  Run_FastWVC.sh  Run_GNN_VC.sh  Run_HILS.sh  Run_NuMWVC.sh  Run_Schulz.sh  gnn_test_with_filter.sh  res_GNN_VC.txt  res_GNN_VC_V2.txt  res_GNN_VC_validation.txt  res_Nu_done.txt  res_Schulz_Dense.txt  res_Schulz_no_Dense.txt  res_dyn2.txt  res_fast_done.txt  res_hils_done.txt  start_slurm  start_slurm_GNN_VC  start_slurm_Nu  start_slurm_dyn  start_slurm_dyn2  start_slurm_fast  start_slurm_gnn_test  start_slurm_hils  start_slurm_schulz.sh  transform_to_schulz.sh  transform_to_wieghted.sh
include/: flow_graph.hpp  gnn_inference.hpp  local_search.hpp  matrix.hpp  medium_solve.hpp  mwvc_reductions.hpp  reduction_graph.hpp  small_solve.hpp
include/gnn/: gnn_inference.hpp  gnn_training.hpp  matrix.hpp
include/mwvc/: local_search.hpp  medium_solve_old.hpp  mwvc_reductions.hpp  reduction_graph.hpp
model/: SS_M1_R0.txt
old_files/: CMakeLists.txt
old_files/include/mtx/: mmio.h
old_files/src/apps/: GNN_VC.cpp  fastWVC_tuned.cpp  gnn_train.cpp  vc_validate.cpp
old_files/src/lib/: gnn_training.cpp  matrix.cpp
other_solvers/DynWVC2/: mwvc.cpp  mwvc.h
other_solvers/FastWVC/: mwvc.cpp  mwvc.h
other_solvers/HILS/: ArgPack.cpp  ArgPack.h  Graph.h  main.cpp
other_solvers/NuMWVC/: wvcp_0123.c  wvcp_0123.h
src/: GNN_VC.cpp  gnn_inference.cpp
src/apps/: GNN_VC.cpp  GNN_VC_experimental.cpp  QUICK_VC.cpp  approximation_solver.cpp  fastWVC_tuned.cpp  gen_reduced_graph.cpp  gen_weights.cpp  gnn_test.cpp  gnn_train.cpp  is_vc_converter.cpp  mtx_to_graph.cpp
src/lib/: gnn_inference.cpp  gnn_training.cpp  matrix.cpp
src/mtx/: example_read.c  example_read.cpp  mmio.c
